// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mock render - default - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": Array [],
      "className": "{\\"style\\":[{\\"padding\\":\\"5px 0px 0px 5px\\"},null]}",
      "id": "default",
      "pending": undefined,
      "pendingDot": undefined,
      "reverse": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.mode: alternate - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": Array [
        <mockConstructor
          color="red"
          dot={
            <IconBlock
              actions={Object {}}
              blockId="properties.mode: alternate_0_icon"
              content={Object {}}
              list={Array []}
              menus={Array []}
              methods={
                Object {
                  "callAction": [Function],
                  "makeCssClass": [MockFunction] {
                    "calls": Array [
                      Array [
                        Array [
                          Object {
                            "padding": "5px 0px 0px 5px",
                          },
                          undefined,
                        ],
                      ],
                    ],
                    "results": Array [
                      Object {
                        "type": "return",
                        "value": "{\\"style\\":[{\\"padding\\":\\"5px 0px 0px 5px\\"},null]}",
                      },
                    ],
                  },
                  "moveItemDown": [Function],
                  "moveItemUp": [Function],
                  "pushItem": [Function],
                  "registerAction": [Function],
                  "registerMethod": [Function],
                  "removeItem": [Function],
                  "unshiftItem": [Function],
                }
              }
              properties={
                Object {
                  "name": "FireOutlined",
                  "style": Object {},
                }
              }
              required={false}
              user={Object {}}
              validation={
                Object {
                  "errors": Array [],
                  "status": null,
                  "warnings": Array [],
                }
              }
            />
          }
          position="left"
        >
          <div
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            Title 1
          </div>
        </mockConstructor>,
        <mockConstructor
          color="green"
          dot={
            <IconBlock
              actions={Object {}}
              blockId="properties.mode: alternate_1_icon"
              content={Object {}}
              list={Array []}
              menus={Array []}
              methods={
                Object {
                  "callAction": [Function],
                  "makeCssClass": [MockFunction] {
                    "calls": Array [
                      Array [
                        Array [
                          Object {
                            "padding": "5px 0px 0px 5px",
                          },
                          undefined,
                        ],
                      ],
                    ],
                    "results": Array [
                      Object {
                        "type": "return",
                        "value": "{\\"style\\":[{\\"padding\\":\\"5px 0px 0px 5px\\"},null]}",
                      },
                    ],
                  },
                  "moveItemDown": [Function],
                  "moveItemUp": [Function],
                  "pushItem": [Function],
                  "registerAction": [Function],
                  "registerMethod": [Function],
                  "removeItem": [Function],
                  "unshiftItem": [Function],
                }
              }
              properties={
                Object {
                  "name": "SettingOutlined",
                  "style": Object {},
                }
              }
              required={false}
              user={Object {}}
              validation={
                Object {
                  "errors": Array [],
                  "status": null,
                  "warnings": Array [],
                }
              }
            />
          }
          position="right"
        >
          <div
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            Text 2
          </div>
        </mockConstructor>,
        <mockConstructor
          color="blue"
          dot={
            <IconBlock
              actions={Object {}}
              blockId="properties.mode: alternate_2_icon"
              content={Object {}}
              list={Array []}
              menus={Array []}
              methods={
                Object {
                  "callAction": [Function],
                  "makeCssClass": [MockFunction] {
                    "calls": Array [
                      Array [
                        Array [
                          Object {
                            "padding": "5px 0px 0px 5px",
                          },
                          undefined,
                        ],
                      ],
                    ],
                    "results": Array [
                      Object {
                        "type": "return",
                        "value": "{\\"style\\":[{\\"padding\\":\\"5px 0px 0px 5px\\"},null]}",
                      },
                    ],
                  },
                  "moveItemDown": [Function],
                  "moveItemUp": [Function],
                  "pushItem": [Function],
                  "registerAction": [Function],
                  "registerMethod": [Function],
                  "removeItem": [Function],
                  "unshiftItem": [Function],
                }
              }
              properties={
                Object {
                  "name": "RocketOutlined",
                  "style": Object {},
                }
              }
              required={false}
              user={Object {}}
              validation={
                Object {
                  "errors": Array [],
                  "status": null,
                  "warnings": Array [],
                }
              }
            />
          }
          position="left"
        >
          <div
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            Text 3
          </div>
        </mockConstructor>,
      ],
      "className": "{\\"style\\":[{\\"padding\\":\\"5px 0px 0px 5px\\"},null]}",
      "id": "properties.mode: alternate",
      "mode": "alternate",
      "pending": undefined,
      "pendingDot": undefined,
      "reverse": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.mode: left - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": Array [
        <mockConstructor
          color="red"
          dot={
            <IconBlock
              actions={Object {}}
              blockId="properties.mode: left_0_icon"
              content={Object {}}
              list={Array []}
              menus={Array []}
              methods={
                Object {
                  "callAction": [Function],
                  "makeCssClass": [MockFunction] {
                    "calls": Array [
                      Array [
                        Array [
                          Object {
                            "padding": "5px 0px 0px 5px",
                          },
                          undefined,
                        ],
                      ],
                    ],
                    "results": Array [
                      Object {
                        "type": "return",
                        "value": "{\\"style\\":[{\\"padding\\":\\"5px 0px 0px 5px\\"},null]}",
                      },
                    ],
                  },
                  "moveItemDown": [Function],
                  "moveItemUp": [Function],
                  "pushItem": [Function],
                  "registerAction": [Function],
                  "registerMethod": [Function],
                  "removeItem": [Function],
                  "unshiftItem": [Function],
                }
              }
              properties={
                Object {
                  "name": "FireOutlined",
                  "style": Object {},
                }
              }
              required={false}
              user={Object {}}
              validation={
                Object {
                  "errors": Array [],
                  "status": null,
                  "warnings": Array [],
                }
              }
            />
          }
          position="left"
        >
          <div
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            Title 1
          </div>
        </mockConstructor>,
        <mockConstructor
          color="green"
          dot={
            <IconBlock
              actions={Object {}}
              blockId="properties.mode: left_1_icon"
              content={Object {}}
              list={Array []}
              menus={Array []}
              methods={
                Object {
                  "callAction": [Function],
                  "makeCssClass": [MockFunction] {
                    "calls": Array [
                      Array [
                        Array [
                          Object {
                            "padding": "5px 0px 0px 5px",
                          },
                          undefined,
                        ],
                      ],
                    ],
                    "results": Array [
                      Object {
                        "type": "return",
                        "value": "{\\"style\\":[{\\"padding\\":\\"5px 0px 0px 5px\\"},null]}",
                      },
                    ],
                  },
                  "moveItemDown": [Function],
                  "moveItemUp": [Function],
                  "pushItem": [Function],
                  "registerAction": [Function],
                  "registerMethod": [Function],
                  "removeItem": [Function],
                  "unshiftItem": [Function],
                }
              }
              properties={
                Object {
                  "name": "SettingOutlined",
                  "style": Object {},
                }
              }
              required={false}
              user={Object {}}
              validation={
                Object {
                  "errors": Array [],
                  "status": null,
                  "warnings": Array [],
                }
              }
            />
          }
          position="right"
        >
          <div
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            Text 2
          </div>
        </mockConstructor>,
        <mockConstructor
          color="blue"
          dot={
            <IconBlock
              actions={Object {}}
              blockId="properties.mode: left_2_icon"
              content={Object {}}
              list={Array []}
              menus={Array []}
              methods={
                Object {
                  "callAction": [Function],
                  "makeCssClass": [MockFunction] {
                    "calls": Array [
                      Array [
                        Array [
                          Object {
                            "padding": "5px 0px 0px 5px",
                          },
                          undefined,
                        ],
                      ],
                    ],
                    "results": Array [
                      Object {
                        "type": "return",
                        "value": "{\\"style\\":[{\\"padding\\":\\"5px 0px 0px 5px\\"},null]}",
                      },
                    ],
                  },
                  "moveItemDown": [Function],
                  "moveItemUp": [Function],
                  "pushItem": [Function],
                  "registerAction": [Function],
                  "registerMethod": [Function],
                  "removeItem": [Function],
                  "unshiftItem": [Function],
                }
              }
              properties={
                Object {
                  "name": "RocketOutlined",
                  "style": Object {},
                }
              }
              required={false}
              user={Object {}}
              validation={
                Object {
                  "errors": Array [],
                  "status": null,
                  "warnings": Array [],
                }
              }
            />
          }
          position="left"
        >
          <div
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            Text 3
          </div>
        </mockConstructor>,
      ],
      "className": "{\\"style\\":[{\\"padding\\":\\"5px 0px 0px 5px\\"},null]}",
      "id": "properties.mode: left",
      "mode": "left",
      "pending": undefined,
      "pendingDot": undefined,
      "reverse": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.mode: right - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": Array [
        <mockConstructor
          color="red"
          dot={
            <IconBlock
              actions={Object {}}
              blockId="properties.mode: right_0_icon"
              content={Object {}}
              list={Array []}
              menus={Array []}
              methods={
                Object {
                  "callAction": [Function],
                  "makeCssClass": [MockFunction] {
                    "calls": Array [
                      Array [
                        Array [
                          Object {
                            "padding": "5px 0px 0px 5px",
                          },
                          undefined,
                        ],
                      ],
                    ],
                    "results": Array [
                      Object {
                        "type": "return",
                        "value": "{\\"style\\":[{\\"padding\\":\\"5px 0px 0px 5px\\"},null]}",
                      },
                    ],
                  },
                  "moveItemDown": [Function],
                  "moveItemUp": [Function],
                  "pushItem": [Function],
                  "registerAction": [Function],
                  "registerMethod": [Function],
                  "removeItem": [Function],
                  "unshiftItem": [Function],
                }
              }
              properties={
                Object {
                  "name": "FireOutlined",
                  "style": Object {},
                }
              }
              required={false}
              user={Object {}}
              validation={
                Object {
                  "errors": Array [],
                  "status": null,
                  "warnings": Array [],
                }
              }
            />
          }
          position="left"
        >
          <div
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            Title 1
          </div>
        </mockConstructor>,
        <mockConstructor
          color="green"
          dot={
            <IconBlock
              actions={Object {}}
              blockId="properties.mode: right_1_icon"
              content={Object {}}
              list={Array []}
              menus={Array []}
              methods={
                Object {
                  "callAction": [Function],
                  "makeCssClass": [MockFunction] {
                    "calls": Array [
                      Array [
                        Array [
                          Object {
                            "padding": "5px 0px 0px 5px",
                          },
                          undefined,
                        ],
                      ],
                    ],
                    "results": Array [
                      Object {
                        "type": "return",
                        "value": "{\\"style\\":[{\\"padding\\":\\"5px 0px 0px 5px\\"},null]}",
                      },
                    ],
                  },
                  "moveItemDown": [Function],
                  "moveItemUp": [Function],
                  "pushItem": [Function],
                  "registerAction": [Function],
                  "registerMethod": [Function],
                  "removeItem": [Function],
                  "unshiftItem": [Function],
                }
              }
              properties={
                Object {
                  "name": "SettingOutlined",
                  "style": Object {},
                }
              }
              required={false}
              user={Object {}}
              validation={
                Object {
                  "errors": Array [],
                  "status": null,
                  "warnings": Array [],
                }
              }
            />
          }
          position="right"
        >
          <div
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            Text 2
          </div>
        </mockConstructor>,
        <mockConstructor
          color="blue"
          dot={
            <IconBlock
              actions={Object {}}
              blockId="properties.mode: right_2_icon"
              content={Object {}}
              list={Array []}
              menus={Array []}
              methods={
                Object {
                  "callAction": [Function],
                  "makeCssClass": [MockFunction] {
                    "calls": Array [
                      Array [
                        Array [
                          Object {
                            "padding": "5px 0px 0px 5px",
                          },
                          undefined,
                        ],
                      ],
                    ],
                    "results": Array [
                      Object {
                        "type": "return",
                        "value": "{\\"style\\":[{\\"padding\\":\\"5px 0px 0px 5px\\"},null]}",
                      },
                    ],
                  },
                  "moveItemDown": [Function],
                  "moveItemUp": [Function],
                  "pushItem": [Function],
                  "registerAction": [Function],
                  "registerMethod": [Function],
                  "removeItem": [Function],
                  "unshiftItem": [Function],
                }
              }
              properties={
                Object {
                  "name": "RocketOutlined",
                  "style": Object {},
                }
              }
              required={false}
              user={Object {}}
              validation={
                Object {
                  "errors": Array [],
                  "status": null,
                  "warnings": Array [],
                }
              }
            />
          }
          position="left"
        >
          <div
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            Text 3
          </div>
        </mockConstructor>,
      ],
      "className": "{\\"style\\":[{\\"padding\\":\\"5px 0px 0px 5px\\"},null]}",
      "id": "properties.mode: right",
      "mode": "right",
      "pending": undefined,
      "pendingDot": undefined,
      "reverse": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.pending: true - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": Array [
        <mockConstructor
          color="red"
          dot={
            <IconBlock
              actions={Object {}}
              blockId="properties.pending: true_0_icon"
              content={Object {}}
              list={Array []}
              menus={Array []}
              methods={
                Object {
                  "callAction": [Function],
                  "makeCssClass": [MockFunction] {
                    "calls": Array [
                      Array [
                        Array [
                          Object {
                            "padding": "5px 0px 0px 5px",
                          },
                          undefined,
                        ],
                      ],
                    ],
                    "results": Array [
                      Object {
                        "type": "return",
                        "value": "{\\"style\\":[{\\"padding\\":\\"5px 0px 0px 5px\\"},null]}",
                      },
                    ],
                  },
                  "moveItemDown": [Function],
                  "moveItemUp": [Function],
                  "pushItem": [Function],
                  "registerAction": [Function],
                  "registerMethod": [Function],
                  "removeItem": [Function],
                  "unshiftItem": [Function],
                }
              }
              properties={
                Object {
                  "name": "FireOutlined",
                  "style": Object {},
                }
              }
              required={false}
              user={Object {}}
              validation={
                Object {
                  "errors": Array [],
                  "status": null,
                  "warnings": Array [],
                }
              }
            />
          }
          position="left"
        >
          <div
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            Title 1
          </div>
        </mockConstructor>,
        <mockConstructor
          color="green"
          dot={
            <IconBlock
              actions={Object {}}
              blockId="properties.pending: true_1_icon"
              content={Object {}}
              list={Array []}
              menus={Array []}
              methods={
                Object {
                  "callAction": [Function],
                  "makeCssClass": [MockFunction] {
                    "calls": Array [
                      Array [
                        Array [
                          Object {
                            "padding": "5px 0px 0px 5px",
                          },
                          undefined,
                        ],
                      ],
                    ],
                    "results": Array [
                      Object {
                        "type": "return",
                        "value": "{\\"style\\":[{\\"padding\\":\\"5px 0px 0px 5px\\"},null]}",
                      },
                    ],
                  },
                  "moveItemDown": [Function],
                  "moveItemUp": [Function],
                  "pushItem": [Function],
                  "registerAction": [Function],
                  "registerMethod": [Function],
                  "removeItem": [Function],
                  "unshiftItem": [Function],
                }
              }
              properties={
                Object {
                  "name": "SettingOutlined",
                  "style": Object {},
                }
              }
              required={false}
              user={Object {}}
              validation={
                Object {
                  "errors": Array [],
                  "status": null,
                  "warnings": Array [],
                }
              }
            />
          }
          position="right"
        >
          <div
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            Text 2
          </div>
        </mockConstructor>,
        <mockConstructor
          color="blue"
          dot={
            <IconBlock
              actions={Object {}}
              blockId="properties.pending: true_2_icon"
              content={Object {}}
              list={Array []}
              menus={Array []}
              methods={
                Object {
                  "callAction": [Function],
                  "makeCssClass": [MockFunction] {
                    "calls": Array [
                      Array [
                        Array [
                          Object {
                            "padding": "5px 0px 0px 5px",
                          },
                          undefined,
                        ],
                      ],
                    ],
                    "results": Array [
                      Object {
                        "type": "return",
                        "value": "{\\"style\\":[{\\"padding\\":\\"5px 0px 0px 5px\\"},null]}",
                      },
                    ],
                  },
                  "moveItemDown": [Function],
                  "moveItemUp": [Function],
                  "pushItem": [Function],
                  "registerAction": [Function],
                  "registerMethod": [Function],
                  "removeItem": [Function],
                  "unshiftItem": [Function],
                }
              }
              properties={
                Object {
                  "name": "RocketOutlined",
                  "style": Object {},
                }
              }
              required={false}
              user={Object {}}
              validation={
                Object {
                  "errors": Array [],
                  "status": null,
                  "warnings": Array [],
                }
              }
            />
          }
          position="left"
        >
          <div
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            Text 3
          </div>
        </mockConstructor>,
      ],
      "className": "{\\"style\\":[{\\"padding\\":\\"5px 0px 0px 5px\\"},null]}",
      "id": "properties.pending: true",
      "pending": true,
      "pendingDot": undefined,
      "reverse": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.pendingDotIcon:  - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": Array [
        <mockConstructor
          color="red"
          dot={
            <IconBlock
              actions={Object {}}
              blockId="properties.pendingDotIcon: _0_icon"
              content={Object {}}
              list={Array []}
              menus={Array []}
              methods={
                Object {
                  "callAction": [Function],
                  "makeCssClass": [MockFunction] {
                    "calls": Array [
                      Array [
                        Array [
                          Object {
                            "padding": "5px 0px 0px 5px",
                          },
                          undefined,
                        ],
                      ],
                    ],
                    "results": Array [
                      Object {
                        "type": "return",
                        "value": "{\\"style\\":[{\\"padding\\":\\"5px 0px 0px 5px\\"},null]}",
                      },
                    ],
                  },
                  "moveItemDown": [Function],
                  "moveItemUp": [Function],
                  "pushItem": [Function],
                  "registerAction": [Function],
                  "registerMethod": [Function],
                  "removeItem": [Function],
                  "unshiftItem": [Function],
                }
              }
              properties={
                Object {
                  "name": "FireOutlined",
                  "style": Object {},
                }
              }
              required={false}
              user={Object {}}
              validation={
                Object {
                  "errors": Array [],
                  "status": null,
                  "warnings": Array [],
                }
              }
            />
          }
          position="left"
        >
          <div
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            Title 1
          </div>
        </mockConstructor>,
        <mockConstructor
          color="green"
          dot={
            <IconBlock
              actions={Object {}}
              blockId="properties.pendingDotIcon: _1_icon"
              content={Object {}}
              list={Array []}
              menus={Array []}
              methods={
                Object {
                  "callAction": [Function],
                  "makeCssClass": [MockFunction] {
                    "calls": Array [
                      Array [
                        Array [
                          Object {
                            "padding": "5px 0px 0px 5px",
                          },
                          undefined,
                        ],
                      ],
                    ],
                    "results": Array [
                      Object {
                        "type": "return",
                        "value": "{\\"style\\":[{\\"padding\\":\\"5px 0px 0px 5px\\"},null]}",
                      },
                    ],
                  },
                  "moveItemDown": [Function],
                  "moveItemUp": [Function],
                  "pushItem": [Function],
                  "registerAction": [Function],
                  "registerMethod": [Function],
                  "removeItem": [Function],
                  "unshiftItem": [Function],
                }
              }
              properties={
                Object {
                  "name": "SettingOutlined",
                  "style": Object {},
                }
              }
              required={false}
              user={Object {}}
              validation={
                Object {
                  "errors": Array [],
                  "status": null,
                  "warnings": Array [],
                }
              }
            />
          }
          position="right"
        >
          <div
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            Text 2
          </div>
        </mockConstructor>,
        <mockConstructor
          color="blue"
          dot={
            <IconBlock
              actions={Object {}}
              blockId="properties.pendingDotIcon: _2_icon"
              content={Object {}}
              list={Array []}
              menus={Array []}
              methods={
                Object {
                  "callAction": [Function],
                  "makeCssClass": [MockFunction] {
                    "calls": Array [
                      Array [
                        Array [
                          Object {
                            "padding": "5px 0px 0px 5px",
                          },
                          undefined,
                        ],
                      ],
                    ],
                    "results": Array [
                      Object {
                        "type": "return",
                        "value": "{\\"style\\":[{\\"padding\\":\\"5px 0px 0px 5px\\"},null]}",
                      },
                    ],
                  },
                  "moveItemDown": [Function],
                  "moveItemUp": [Function],
                  "pushItem": [Function],
                  "registerAction": [Function],
                  "registerMethod": [Function],
                  "removeItem": [Function],
                  "unshiftItem": [Function],
                }
              }
              properties={
                Object {
                  "name": "RocketOutlined",
                  "style": Object {},
                }
              }
              required={false}
              user={Object {}}
              validation={
                Object {
                  "errors": Array [],
                  "status": null,
                  "warnings": Array [],
                }
              }
            />
          }
          position="left"
        >
          <div
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            Text 3
          </div>
        </mockConstructor>,
      ],
      "className": "{\\"style\\":[{\\"padding\\":\\"5px 0px 0px 5px\\"},null]}",
      "id": "properties.pendingDotIcon: ",
      "pending": true,
      "pendingDot": <IconBlock
        actions={Object {}}
        blockId="properties.pendingDotIcon: _pendingDotIcon"
        content={Object {}}
        list={Array []}
        menus={Array []}
        methods={
          Object {
            "callAction": [Function],
            "makeCssClass": [MockFunction] {
              "calls": Array [
                Array [
                  Array [
                    Object {
                      "padding": "5px 0px 0px 5px",
                    },
                    undefined,
                  ],
                ],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": "{\\"style\\":[{\\"padding\\":\\"5px 0px 0px 5px\\"},null]}",
                },
              ],
            },
            "moveItemDown": [Function],
            "moveItemUp": [Function],
            "pushItem": [Function],
            "registerAction": [Function],
            "registerMethod": [Function],
            "removeItem": [Function],
            "unshiftItem": [Function],
          }
        }
        properties={
          Object {
            "style": Object {
              "fontSize": 16,
            },
          }
        }
        required={false}
        user={Object {}}
        validation={
          Object {
            "errors": Array [],
            "status": null,
            "warnings": Array [],
          }
        }
      />,
      "reverse": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.reverse: true - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": Array [
        <mockConstructor
          color="red"
          dot={
            <IconBlock
              actions={Object {}}
              blockId="properties.reverse: true_0_icon"
              content={Object {}}
              list={Array []}
              menus={Array []}
              methods={
                Object {
                  "callAction": [Function],
                  "makeCssClass": [MockFunction] {
                    "calls": Array [
                      Array [
                        Array [
                          Object {
                            "padding": "5px 0px 0px 5px",
                          },
                          undefined,
                        ],
                      ],
                    ],
                    "results": Array [
                      Object {
                        "type": "return",
                        "value": "{\\"style\\":[{\\"padding\\":\\"5px 0px 0px 5px\\"},null]}",
                      },
                    ],
                  },
                  "moveItemDown": [Function],
                  "moveItemUp": [Function],
                  "pushItem": [Function],
                  "registerAction": [Function],
                  "registerMethod": [Function],
                  "removeItem": [Function],
                  "unshiftItem": [Function],
                }
              }
              properties={
                Object {
                  "name": "FireOutlined",
                  "style": Object {},
                }
              }
              required={false}
              user={Object {}}
              validation={
                Object {
                  "errors": Array [],
                  "status": null,
                  "warnings": Array [],
                }
              }
            />
          }
          position="left"
        >
          <div
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            Title 1
          </div>
        </mockConstructor>,
        <mockConstructor
          color="green"
          dot={
            <IconBlock
              actions={Object {}}
              blockId="properties.reverse: true_1_icon"
              content={Object {}}
              list={Array []}
              menus={Array []}
              methods={
                Object {
                  "callAction": [Function],
                  "makeCssClass": [MockFunction] {
                    "calls": Array [
                      Array [
                        Array [
                          Object {
                            "padding": "5px 0px 0px 5px",
                          },
                          undefined,
                        ],
                      ],
                    ],
                    "results": Array [
                      Object {
                        "type": "return",
                        "value": "{\\"style\\":[{\\"padding\\":\\"5px 0px 0px 5px\\"},null]}",
                      },
                    ],
                  },
                  "moveItemDown": [Function],
                  "moveItemUp": [Function],
                  "pushItem": [Function],
                  "registerAction": [Function],
                  "registerMethod": [Function],
                  "removeItem": [Function],
                  "unshiftItem": [Function],
                }
              }
              properties={
                Object {
                  "name": "SettingOutlined",
                  "style": Object {},
                }
              }
              required={false}
              user={Object {}}
              validation={
                Object {
                  "errors": Array [],
                  "status": null,
                  "warnings": Array [],
                }
              }
            />
          }
          position="right"
        >
          <div
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            Text 2
          </div>
        </mockConstructor>,
        <mockConstructor
          color="blue"
          dot={
            <IconBlock
              actions={Object {}}
              blockId="properties.reverse: true_2_icon"
              content={Object {}}
              list={Array []}
              menus={Array []}
              methods={
                Object {
                  "callAction": [Function],
                  "makeCssClass": [MockFunction] {
                    "calls": Array [
                      Array [
                        Array [
                          Object {
                            "padding": "5px 0px 0px 5px",
                          },
                          undefined,
                        ],
                      ],
                    ],
                    "results": Array [
                      Object {
                        "type": "return",
                        "value": "{\\"style\\":[{\\"padding\\":\\"5px 0px 0px 5px\\"},null]}",
                      },
                    ],
                  },
                  "moveItemDown": [Function],
                  "moveItemUp": [Function],
                  "pushItem": [Function],
                  "registerAction": [Function],
                  "registerMethod": [Function],
                  "removeItem": [Function],
                  "unshiftItem": [Function],
                }
              }
              properties={
                Object {
                  "name": "RocketOutlined",
                  "style": Object {},
                }
              }
              required={false}
              user={Object {}}
              validation={
                Object {
                  "errors": Array [],
                  "status": null,
                  "warnings": Array [],
                }
              }
            />
          }
          position="left"
        >
          <div
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            Text 3
          </div>
        </mockConstructor>,
      ],
      "className": "{\\"style\\":[{\\"padding\\":\\"5px 0px 0px 5px\\"},null]}",
      "id": "properties.reverse: true",
      "pending": undefined,
      "pendingDot": undefined,
      "reverse": true,
    },
    Object {},
  ],
]
`;
